[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/DotGothic16-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Scripts/BaseButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scripts/AnimRect.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scripts/MenuController.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 63
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 63
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="PlayButton" type="Button" parent="."]
margin_top = 200.0
margin_right = 750.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
align = 0
script = ExtResource( 2 )

[node name="AnimRect" type="ColorRect" parent="PlayButton"]
margin_right = 36.0
margin_bottom = 100.0
color = Color( 0.678431, 0.0313726, 0.0313726, 1 )
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="PlayButton"]
margin_right = 749.0
margin_bottom = 101.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 2 )
text = "	Play"

[node name="SettingsButton" type="Button" parent="."]
margin_top = 440.0
margin_right = 750.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 1 )
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimRect" type="ColorRect" parent="SettingsButton"]
margin_right = 36.0
margin_bottom = 100.0
color = Color( 0.678431, 0.0313726, 0.0313726, 1 )
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="SettingsButton"]
margin_right = 749.0
margin_bottom = 101.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 2 )
text = "	Settings"

[node name="CreditsButton" type="Button" parent="."]
margin_top = 560.0
margin_right = 750.0
margin_bottom = 660.0
custom_fonts/font = SubResource( 1 )
align = 0
script = ExtResource( 2 )

[node name="AnimRect" type="ColorRect" parent="CreditsButton"]
margin_right = 36.0
margin_bottom = 100.0
color = Color( 0.678431, 0.0313726, 0.0313726, 1 )
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsButton"]
margin_right = 749.0
margin_bottom = 101.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 2 )
text = "	Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_top = 680.0
margin_right = 750.0
margin_bottom = 780.0
custom_fonts/font = SubResource( 1 )
align = 0
script = ExtResource( 2 )

[node name="AnimRect" type="ColorRect" parent="ExitButton"]
margin_right = 36.0
margin_bottom = 100.0
color = Color( 0.678431, 0.0313726, 0.0313726, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ExitButton"]
margin_right = 749.0
margin_bottom = 101.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 2 )
text = "	Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="PlayButton" to="PlayButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="PlayButton" method="_on_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="SettingsButton" to="SettingsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SettingsButton" to="SettingsButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CreditsButton" to="CreditsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CreditsButton" to="CreditsButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ExitButton" to="ExitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="ExitButton" method="_on_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
